--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
+    "black>=23.0.0",
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
     "pytest-asyncio>=0.21.0",
@@ -58,7 +59,8 @@ dev = [
     "sphinx>=7.0.0",
     "sphinx-book-theme>=1.0.0",
     "sphinx-autobuild>=2021.3.14",
-    "sphinx-copybutton>=0.5.0"
+    "sphinx-copybutton>=0.5.0",
+    "jwcrypto>=1.5.0"
 ]
 
 [project.urls]
