--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,8 @@ dev = [
     "sphinx-book-theme>=1.0.0",
     "sphinx-autobuild>=2021.3.14",
     "sphinx-copybutton>=0.5.0",
-    "jwcrypto>=1.5.0"
+    "jwcrypto>=1.5.0",
+    "sqlmodel>=0.0.14"
 ]
 
 [project.urls]
